[package]
name = "inari_wasm"
version = "0.1.1"
authors = ["Masashi Mizuno", "Nejc Jezersek"]
edition = "2021"
description = "A stripped-down version of Inari library (a Rust implementation of interval arithmetic) compatible with web assembly"
license = "MIT"
homepage = "https://github.com/njezersek/inari-wasm"
repository = "https://github.com/njezersek/inari-wasm"
keywords = ["arithmetic", "interval", "math", "numerics"]
categories = ["mathematics", "science"]
readme = "README.md"

[dependencies]
forward_ref = "1.0.0"
libm = "0.2.3"
